update common vars update htpasswd

--- a/ansible/roles/rutorrent/templates/var/www/rutorrent/.htpasswd.j2
+++ b/ansible/roles/rutorrent/templates/var/www/rutorrent/.htpasswd.j2
@@ -1,1 +1,2 @@
-<%htpasswd['username']%>:<%htpasswd['crypt']%>
+#jinja2:variable_start_string:'<%', variable_end_string:'%>', trim_blocks: False
+<%htpasswd.username%>:<%htpasswd.crypt%>
