--- a/ansible/roles/rutorrent/templates/etc/apache2/.htpasswd.j2
+++ b/ansible/roles/rutorrent/templates/etc/apache2/.htpasswd.j2
@@ -1,2 +1,2 @@
 #jinja2:variable_start_string:'<%', variable_end_string:'%>', trim_blocks: False
-<%htpasswd.username%>:<%htpasswd.crypt%>
+<%htpasswd_username%>:<%htpasswd_crypt%>
